--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="yt">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/b3rNUhDqciM?si=iVUmU31R2Y-SYlnN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <p>Stay tuned folks</p>
     </div>
 </body>
 </html>
